--- a/top-rayout.css
+++ b/top-rayout.css
@@ -22,6 +22,19 @@ input,select,textarea{
     font-family: 'Noto Serif JP', serif;
 }
 
+select{
+    appearance: none;
+}
+
+.select::after{
+    content:"◢" ;
+    transform: rotate(45deg) scale(0.5);
+    display: inline-block;
+    position: relative;
+    right: 30px;
+    color: #79A7D9;
+}
+
 input[type=radio]{
     display: none;
 }
