--- a/top-rayout-sp.css
+++ b/top-rayout-sp.css
@@ -392,7 +392,7 @@ h3{
 .round-img{
     width: 150px;
     padding: 10px 0 15px 0;
-    display: inline-block;
+    margin: 0 auto;
 }
 
 .step-title{
