--- a/top-rayout.css
+++ b/top-rayout.css
@@ -97,11 +97,11 @@ input[type=radio]{
     display: inline-block;
     transform: scale(4);
     position: relative;
-    right: 130px;
-    bottom: 30px;
     z-index: 10;
     color: #F2AB40;
     font-style: italic;
+    right: 130px;
+    top: 20px;
 }
 
 .back-text-f{
@@ -110,10 +110,11 @@ input[type=radio]{
     transform: scale(4);
     position: relative;
     right: 305px;
-    bottom: 30px;
     z-index: 10;
     color: #F2AB40;
     font-style: italic;
+    top: 20px;
+    margin-top: 60px;
 }
 
 .top-header{
@@ -399,40 +400,33 @@ input[type=radio]{
 }
 
 .third-flex{
-    margin-left: auto;
-    margin-right: auto;
-    width: 700px;
+    margin: 0 auto;
     display: flex;
-    justify-content: center;
     flex-wrap: wrap;
+    width: 700px;
     gap: 60px;
+    justify-content: center;
 }
 
-.service-contents01,.service-contents02{
+.service-contents{
     border: #BCCFE4 solid 5px;
     width: 280px;
 }
 
-.service-contents01{
-    height: 400px;
-}
-
-.service-title,.service-title-04{
+.service-title{
     display: inline-block;
     font-size: 16px;
     width: 260px;
-    padding-bottom: 20px;
+    padding: 40px 0 20px ;
     border-bottom: #BCCFE4 solid 1px;
-    margin-bottom: 30px;
     position: relative;
-    bottom: 20px;
+    margin-bottom: 30px;
 }
 
 .service-img{
     width: 260px;
     padding-bottom: 20px;
     position: relative;
-    bottom: 20px;
 }
 
 .service-details{
@@ -449,18 +443,17 @@ input[type=radio]{
     width: 630px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 60px;
     margin-bottom: 13px;
 }
 
 .service-title-f{
     position: relative;
-    bottom: 20px;
-    padding-bottom: 30px;
+    padding-bottom: 50px;
+    padding-top: 40px;
 }
 
 .service-summary-f{
-    padding-bottom: 30px;
+    padding-bottom: 10px;
     color: #F2AB40;
 }
 
